# waystt

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dotype  flake.nix  home-manager-example.nix  hotline.toml.example  play_beep.rs  play_busy.rs  shell.nix
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur-publish.yml  check.yml  ci.yml  dependency-update.yml  release.yml
TASKS/: TASK1.md  TASK1_NOTES.md  TASK2.md  TASK3.md  TASK4.md  TASK5.md  TASK6.md
aur/: README.md
aur/waystt-bin/: PKGBUILD.template
docs/: aur.md  environment-configuration.md  roadmap.md  technology-stack.md
docs/tickets/: 001-simple-audio-recording.md  002-signal-processing-audio-prep.md  003-whisper-integration.md  004-transcription-provider-abstraction.md
man/: README.md  hotline-config.1  hotline-daemon.1  hotline-sendcmd.1  hotline-start-transcription.1  hotline-stop-transcription.1  hotline-toggle-transcription.1  hotline.1  hotline.toml.5
modules/: dendritic.nix  devshell.nix  git-hooks.nix  home-manager.nix  package.nix  treefmt.nix
openai_docs/: overview.md  realtime_conversations.md  realtime_transcription.md  vad.md
src/: app.rs  audio.rs  audio_processing.rs  beep.rs  cli.rs  clipboard.rs  command.rs  command_executor.rs  config.rs  lib.rs  main.rs  main_realtime.rs  main_streaming.rs  mpris.rs  pipeline.rs  signals.rs  socket.rs  sound_manager.rs  test_utils.rs  wav.rs  whisper.rs
src/transcription/: google.rs  google.rs.disabled  google_v2.rs  google_v2_rest.rs  local.rs  mod.rs  openai.rs  realtime.rs  streaming.rs
