[package]
name = "waystt"
version = "0.1.1"
edition = "2021"
description = "Speech-to-text tool for Wayland"
license = "GPL-3.0-or-later"
authors = ["Artur Roszczyk <artur.roszczyk@gmail.com>"]

[dependencies]
# Core dependencies (essential)
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
dirs = "5.0"

# Audio capture
cpal = "0.15"

# Wayland clipboard integration
wl-clipboard-rs = "0.8"

# JSON parsing for API responses
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"

# Error handling
thiserror = "1.0"

# Async trait support
async-trait = "0.1"

# System interface for clipboard daemon
libc = "0.2"

# Google Cloud Speech-to-Text (using google-api-proto instead of google-speech1)
google-api-proto = { version = "1.710", features = ["google-cloud-speech-v2"] }
tonic = { version = "0.12.3", features = ["tls-webpki-roots", "tls-native-roots"] }
yup-oauth2 = "11.0"


[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
tokio-test = "0.4"


[[bin]]
name = "waystt"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
