[package]
name = "hotline"
version = "0.2.3"
edition = "2021"
description = "A minimalist speech-to-text (STT) tool."
license = "GPL-3.0-or-later"
authors = ["Roberto Abdelkader Martínez Pérez <robertomartinezp@gmail.com>"]

[dependencies]
# Core dependencies (essential)
tokio = { version = "1.0", features = ["full", "io-util", "net"] }
anyhow = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
dirs = "5.0"

# Audio capture
cpal = "0.15"

# JSON parsing for API responses
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"

# WebSocket for real-time transcription
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
toml = "0.9.5"

# MPRIS D-Bus integration
mpris-server = "0.9.0"
zbus = "5.5"
futures-channel = "0.3"


[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
tokio-test = "0.4"


[[bin]]
name = "hotline"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
